# merkl

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: backend.rs  hash.rs  lib.rs  memory.rs  proof.rs  sha256.rs  tests.rs  tree.rs
redb/: Cargo.toml  README.md
redb/src/: backend.rs  lib.rs
src/: backend.rs  ephemeral.rs  fjall.rs  hash.rs  lib.rs  memory.rs  node.rs  proof.rs  redb.rs  sha256.rs  tests.rs  tree.rs
