[workspace]
members = ["core", "redb"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Victor Lopez <vhrlopes@gmail.com>"]
license = "MIT"
repository = "https://github.com/vlopes11/merkl"
readme = "README.md"
description = "MerkleTree, embedded friendly implementation."
categories = ["data-structures", "no-std"]
keywords = ["merkle"]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
redb = { version = "3.1" }
sha2 = { version = "0.10", default-features = false }
