[package]
name = "merkl"
version = "0.4.0"
edition = "2024"
authors = ["Victor Lopez <vhrlopes@gmail.com>"]
license = "MIT"
repository = "https://github.com/vlopes11/merkl"
readme = "README.md"
description = "MerkleTree, embedded friendly implementation."
categories = ["data-structures", "no-std"]
keywords = ["merkle", "redb"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
fjall = { version = "3.1", optional = true }
redb = { version = "3.1", optional = true }
serde = { version = "1.0", default-features = false, features = [
  "alloc",
  "derive",
], optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }

[dev-dependencies]
sha2 = "0.10"

[features]
default = ["std"]
fjall = ["dep:fjall", "std"]
redb = ["dep:redb", "std"]
sha2 = ["dep:sha2"]
std = [
  "anyhow/default",
  "serde?/default",
  "sha2?/default",
]

[lints.clippy]
type_complexity = "allow"
