[package]
name = "merkl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "MerkleTree, embedded friendly implementation."
categories = ["data-structures", "no-std"]
keywords = ["merkle", "redb"]

[features]
sha2 = ["dep:sha2"]

[dependencies]
anyhow = { workspace = true }
sha2 = { workspace = true, optional = true }

[dev-dependencies]
sha2 = { workspace = true }
