[package]
name = "merkl-redb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "MerkleTree, embedded friendly implementation with redb backend."
categories = ["data-structures", "no-std"]
keywords = ["merkle", "redb"]

[features]
# Wraps the shared database handle in Arc instead of Rc, making RedbBackend
# Send + Sync.  Requires atomic-pointer support on the target; do not enable
# on hardware targets that lack atomics.
multi-thread = []
# Exposes Sha256Hasher and the Sha256RedbMerkleTree alias.
sha2 = ["merkl/sha2"]

[dependencies]
anyhow = { workspace = true, features = ["std"] }
merkl = { path = "../core", version = "0.1" }
redb = { workspace = true }
